Correções de chamadas a métodos depreciados.